--- a/js.html
+++ b/js.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>
-        Learnig Javascript
+        Learnig Javascript Lesso!!
     </title>
    <script src="js.js" type="text/javascript">
           
